# Morfogenesi

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  main.cpp  main.hpp
glad/: CMakeLists.txt  glad.c  glad.h
